	* Added: Todoyu.Helper.cloneObject() for deep object copy (alternative to Object.clone())
	* Added: Javascript form submit helpers (simple file upload)
	* Added: TodoyuRenderer::renderSelectGrouped(). Extracted from a dwoo plugin
	* Added: Dwoo plugin {restrictAdmin}retricted content{/restrictAdmin}
	* Changed: Unified method naming - getDateXXX() getPersonXXX() getPersonXXXID()
	* Changed: Renamed TodoyuFieldset to TodoyuFormFieldset
	* Changed: Prevent selection of disabled select option
	* Changed: Todoyu.Time: time means now php timestamp and date means js date object (for vars and methods)
	* Changed: Updates of date fields with the popup calendar will now trigger a change event
	* Changed: Used faster (int) instead of intval() for integer typecasting
	* Changed: Moved getDayTimestamps(), getDayTimestampsMap() to TodoyuDayRange
	* Changed: Made TodoyuTime::getWeekStart and getWeekAnd relative to system config of 1st day of week being sunday or monday
	* Changed: Minimum PHP version is 5.2.5
	* Changed: Renamed TodoyuDateRange::getDiff() to getDuration(), TodoyuDayRange::getDiffInDays() to getDurationInDays()
	* Changed: Renamed TodoyuRecordManger::deleteRecords() to deleteRecordsByID()
	* Changed: ListingRenderer behaviour. Changed Parameter sword to params to be more flexible.
	* Changed: Rich Text Editor (tinyMCE) uses now advanced mode with some additional edit features
	* Changed: Renamed config/admin.php to config/sysmanager.php because admin extension was removed
	* Removed: scal calendar/date picker library
	* Removed: TodoyuString::replaceOnce()
	* Removed: TodoyuString::strictHtml2text() is now integrated in html2text() method

core 2.1.4 - 2011-12-13
	* Bugfix: Hovering multiple quick-info elements subsequently in direct sequence did only show the first info, no following ones
	* Bugfix: RTE auto focus failed. Added workaround to focus RTE if first field
	* Bugfix: Area was not set on popup AJAX requests